стили у кнопки в браузерах сафари

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ body {
   -o-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
+  -webkit-appearance: none;
 }
 
 .header__button:hover {
