--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,11 @@ body {
   -o-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
-  -webkit-appearance: none;
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
+  background-color: #ffffff;
+  
 }
 
 .header__button:hover {
@@ -644,12 +648,15 @@ body {
 .progress__box {
   width: 100%;
   height: 100%;
+  display: flex;
   position: relative;
 }
 
 .progress__box img {
-  max-width: 100%;
-  min-height: 100%;
+ width: 100%;
+ height: 100%;
+ object-fit: cover;
+  
 }
 
 .progress__box::before {
@@ -1497,6 +1504,10 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     -ms-grid-rows: (minmax(200px, 1fr))[2];
     grid-template-rows: repeat(2, minmax(200px, 1fr));
+  }
+
+  .progress__box img {
+    min-height: auto;
   }
 
   .reviews {
