--- a/css/style.css
+++ b/css/style.css
@@ -1241,10 +1241,9 @@ body {
     margin-left: 50px;
   }
 
-  .progress__box img {
-    width: 100%;
-    height: 100%;
-  }
+  .progress__box {
+   display: block;
+   }
 }
 
 @media (min-width: 1920px) {
